# onixlib

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  publication.md  pyproject.toml  xsd_sources.toml
docs/source/: conf.py  onixlib.cli.generate.rst  onixlib.cli.utils.rst  onixlib.models.book.rst  onixlib.models.descriptive.rst  onixlib.models.publishing.rst  onixlib.models.versions.rst  onixlib.parser.rst  onixlib.rst  onixlib.tests.rst  onixlib.tests.test_contributor.rst  onixlib.tests.test_header.rst  onixlib.tests.test_imports.rst  onixlib.tests.test_notice.rst  onixlib.tests.test_product.rst  onixlib.tests.test_versions.rst  onixlib.utils.datetime.rst
documentations/: chargement_doc_onix3.ipynb
documentations/xsd_onix3/3.0/: .meta.toml  ONIX_BookProduct_3.0_reference.xsd  ONIX_BookProduct_3.0_short.xsd  ONIX_BookProduct_CodeLists.xsd
src/onixlib/: __init__.py  __init__.pyi
src/onixlib/cli/: generate.py  meta.py  utils.py
src/onixlib/models/: __init__.py  __init__.pyi  book.py  book.pyi  collateral.py  collateral.pyi  contributor.py  contributor.pyi  descriptive.py  descriptive.pyi  header.py  header.pyi  notice.py  notice.pyi  product.py  product.pyi  product_supply.py  product_supply.pyi  publishing.py  publishing.pyi  related_material.py  related_material.pyi  versions.py  versions.pyi
src/onixlib/parser/: __init__.py
src/onixlib/tests/: test_contributor.py  test_header.py  test_imports.py  test_notice.py  test_product.py  test_versions.py
src/onixlib/tests/fixtures/: notice_empty.xml  notice_v3_0.xml
src/onixlib/utils/: datetime.py
