[project]
name = "onixlib"
version = "0.1.0"
description = "Bibliothèque souveraine pour parser ou créer les fichiers ONIX pour les métiers du livre."
authors = [{name="Rémi Verschuur", email="rverschuur@audit-io.fr"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11, <3.15"
dependencies = []
keywords = ["livres", "édition", "ONIX", "distribution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: French",
]

[project.urls]
Homepage = "https://github.com/remiv1/onixlib"
Repository = "https://github.com/remiv1/onixlib"
Changelog = "https://github.com/remiv1/onixlib/blob/main/CHANGELOG.md"
Documentation = "https://remiv1.github.io/onixlib/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dilicom_parser.utils" = ["*.toml"]
