[project]
name = "onixlib"
version = "0.1.4"
description = "Bibliothèque souveraine pour parser ou créer les fichiers ONIX pour les métiers du livre."
authors = [{name="Rémi Verschuur", email="rverschuur@audit-io.fr"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11, <3.15"
dependencies = [
    "xsdata>=24.0"
    ]
keywords = ["livres", "édition", "ONIX", "distribution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: French",
]

[project.optional-dependencies]
dev = [
    "xsdata[cli]>=24.0",
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=2.0",
    "furo",                         # thème Sphinx moderne
    "pytest>=9.0",
    "build",
    "twine",
]

[project.scripts]
onix-generate = "onixlib.cli.generate:main"

[project.urls]
Homepage = "https://github.com/remiv1/onixlib"
Repository = "https://github.com/remiv1/onixlib"
Changelog = "https://github.com/remiv1/onixlib/blob/main/CHANGELOG.md"
Documentation = "https://remiv1.github.io/onixlib/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dilicom_parser.utils" = ["*.toml"]
"onixlib" = ["py.typed", "*.pyi", "models/*.pyi"]

# ---------------------------------------------------------------------------
# xsdata — configuration de génération
# (sert de référence ; les paramètres sont passés explicitement via le CLI)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["src/onixlib/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.xsdata]
package = "onixlib.models.generated"

[tool.xsdata.output]
path = "src"
structure = "single-package"
docstring_style = "reStructuredText"
format = "dataclasses"

